--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -7,6 +7,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/arena/arena.gd"
 }, {
+"base": &"Node2D",
+"class": &"ChargeAttackBehaviour",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/units/enemies/charge_attack_behaviour.gd"
+}, {
 "base": &"Unit",
 "class": &"Enemy",
 "icon": "",
@@ -110,6 +118,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scenes/weapons/range/range_behaviour.gd"
+}, {
+"base": &"Node2D",
+"class": &"ShootingBehaviour",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/units/enemies/shooting_behaviour.gd"
 }, {
 "base": &"Area2D",
 "class": &"Unit",
