--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -127,6 +127,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/enemies/shooting_behaviour.gd"
 }, {
+"base": &"Node2D",
+"class": &"Spawner",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/arena/spawner.gd"
+}, {
 "base": &"Area2D",
 "class": &"Unit",
 "icon": "",
