--- a/yolk-survivors/.godot/editor/script_editor_cache.cfg
+++ b/yolk-survivors/.godot/editor/script_editor_cache.cfg
@@ -31,7 +31,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
@@ -376,6 +376,34 @@ state={
 "h_scroll_position": 0,
 "row": 88,
 "scroll_position": 62.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ui/stats/stats_container.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ui/upgrades/upgrade_card.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
