--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -135,6 +135,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/arena/spawner.gd"
 }, {
+"base": &"Panel",
+"class": &"StatsContainer",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/stats/stats_container.gd"
+}, {
 "base": &"Area2D",
 "class": &"Unit",
 "icon": "",
@@ -150,6 +158,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://resources/unit_stats.gd"
+}, {
+"base": &"Panel",
+"class": &"UpgradeCard",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/upgrades/upgrade_card.gd"
 }, {
 "base": &"Resource",
 "class": &"WaveData",
