--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -167,6 +167,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/ui/upgrades/upgrade_card.gd"
 }, {
+"base": &"Panel",
+"class": &"UpgradePanel",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/upgrades/upgrade_panel.gd"
+}, {
 "base": &"Resource",
 "class": &"WaveData",
 "icon": "",
