--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -35,7 +35,7 @@ open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/
 current_scene="res://scenes/arena/arena.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -47,7 +47,7 @@ position=Vector2i(0, 34)
 [ScriptEditor]
 
 open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/charge_attack_behaviour.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/upgrades/item_upgrades.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/projectiles/projectile.gd", "res://scenes/weapons/range/range_behaviour.gd", "res://scenes/units/enemies/shooting_behaviour.gd", "res://scenes/arena/spawner.gd", "res://scenes/ui/stats/stats_container.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/ui/upgrades/upgrade_card.gd", "res://scenes/ui/upgrades/upgrade_panel.gd", "res://resources/wave/wave_data.gd", "res://resources/wave/wave_unit_data.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://scenes/ui/upgrades/upgrade_panel.gd"
+selected_script="res://scenes/arena/arena.gd"
 open_help=["Signal"]
 script_split_offset=300
 list_split_offset=0
