--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/items/upgrades/data/upgrade_speed_1.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/weapons/", "res://scenes/units/players/", "res://scenes/ui/", "res://scenes/ui/upgrades/", "res://resources/", "res://resources/wave/", "res://resources/wave/data/", "res://resources/units/players/", "res://resources/items/", "res://resources/items/weapons/range/", "res://resources/items/weapons/melee/", "res://resources/items/upgrades/", "res://resources/items/upgrades/data/", "res://autoload/", "res://assets/sprites/Weapons/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/items/upgrades/data/speed/upgrade_speed_20.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/weapons/", "res://scenes/units/players/", "res://scenes/ui/", "res://scenes/ui/upgrades/", "res://resources/", "res://resources/wave/", "res://resources/wave/data/", "res://resources/units/players/", "res://resources/items/", "res://resources/items/weapons/range/", "res://resources/items/weapons/melee/", "res://resources/items/upgrades/", "res://resources/items/upgrades/data/", "res://resources/items/upgrades/data/speed/", "res://autoload/", "res://assets/sprites/Weapons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,7 +31,7 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/upgrades/upgrade_card.tscn", "res://scenes/ui/upgrades/upgrade_panel.tscn", "res://scenes/units/players/player_well_rounded.tscn")
+open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/upgrades/upgrade_card.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/ui/upgrades/upgrade_panel.tscn")
 current_scene="res://scenes/arena/arena.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
