--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoload/sound_manager.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/startscreen.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://styles/", "res://scenes/", "res://scenes/weapons/", "res://scenes/weapons/range/", "res://scenes/ui/upgrades/", "res://scenes/ui/selection_panel/", "res://resources/", "res://resources/wave/", "res://resources/wave/data/", "res://resources/units/", "res://resources/units/enemies/", "res://resources/items/", "res://resources/items/weapons/", "res://resources/items/weapons/melee/", "res://resources/items/upgrades/data/speed/", "res://autoload/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/Weapons/Range/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -32,7 +32,7 @@ dock_3="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/selection_panel/selection_panel.tscn")
-current_scene="res://scenes/ui/selection_panel/selection_panel.tscn"
+current_scene="res://scenes/arena/arena.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
