--- a/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
+++ b/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
@@ -5,3 +5,4 @@ UnitStats=PackedStringArray("uid://ceadrrvkl68an", "uid://b4044jccypcut", "uid:/
 PackedScene=PackedStringArray("uid://85rf32ecc04m", "uid://dy6m2b3eopxya", "uid://b7uh86ri17523", "uid://cc2q4650v5nly", "uid://wjxii7k20fpj", "uid://c4xdsqfy0uqgj", "uid://lsucb07nv2yt", "uid://b7hhtxfn6wpfg", "uid://cb0fmnv3j0ukq", "uid://bgbxwl6vgfu5u", "uid://sbew4vc23htb", "uid://b1l4wi7epuqgy", "uid://ds2epd1f14mtm", "uid://b6qrb6vjg7h3e", "uid://h751fs4d43e4", "uid://dep0tblwkko8c", "uid://bdmv5l6abbkej", "uid://bjya0gr4fuwcq", "uid://dpqx5cjywg1wo", "uid://cw0dx3phrq4iu")
 Script=PackedStringArray("uid://b6fnavdkpceb3", "uid://00a7ubrlb0t", "uid://dnq721qxn30t8", "uid://6ltfp33hbbs2", "uid://x15j425axu2e")
 StyleBox=PackedStringArray("uid://b8f1yuybm4wml")
+Font=PackedStringArray("uid://kfh6ooeul77g")
