--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -31,8 +31,8 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/selection_panel/selection_panel.tscn", "res://scenes/ui/shop/item_card.tscn", "res://scenes/ui/custom_button/custom_button.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/shop/shop_panel.tscn", "res://scenes/ui/shop/shop_card.tscn")
-current_scene="res://scenes/ui/shop/shop_card.tscn"
+open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/selection_panel/selection_panel.tscn", "res://scenes/ui/shop/item_card.tscn", "res://scenes/ui/custom_button/custom_button.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/shop/shop_panel.tscn", "res://scenes/ui/shop/shop_card.tscn", "res://scenes/units/players/player_well_rounded.tscn")
+current_scene="res://scenes/units/players/player_well_rounded.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -47,7 +47,7 @@ position=Vector2i(0, 34)
 [ScriptEditor]
 
 open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/charge_attack_behaviour.gd", "res://scenes/coins/coins.gd", "res://coins_bag.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://fried.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://scenes/ui/shop/item_card.gd", "res://resources/items/passives/item_passive.gd", "res://resources/items/upgrades/item_upgrades.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/projectiles/projectile.gd", "res://scenes/weapons/range/range_behaviour.gd", "res://scenes/ui/selection_panel/selection_card.gd", "res://scenes/ui/selection_panel/selection_panel.gd", "res://scenes/units/enemies/shooting_behaviour.gd", "res://scenes/ui/shop/shop_card.gd", "res://scenes/ui/shop/shop_panel.gd", "res://autoload/sound_manager.gd", "res://scenes/arena/spawner.gd", "res://scenes/effects/spawn_effect.gd", "res://scenes/ui/stats/stats_container.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/ui/upgrades/upgrade_card.gd", "res://scenes/ui/upgrades/upgrade_panel.gd", "res://resources/wave/wave_data.gd", "res://resources/wave/wave_unit_data.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://scenes/ui/shop/item_card.gd"
+selected_script="res://scenes/units/players/player.gd"
 open_help=["Signal"]
 script_split_offset=394
 list_split_offset=-1
